--- a/style.css
+++ b/style.css
@@ -170,10 +170,13 @@ body {
     width: 100px;
     bottom: 50px;
     right: 50px;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
 }
 
 .suporte img:hover {
     margin-bottom: 2px;
+    opacity: .8;
 }
 
 .recuperar a {
