--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
     height: auto;
     margin: 0;
     padding: 0;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .login {
